# latent-lab

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
configs/experiments/: base.yaml  cv_classification.yaml  cv_detection_yolo.yaml  dl_autoencoder.yaml  dl_cnn_cifar10.yaml  dl_diffusion_inference.yaml  dl_gan_mnist.yaml  dl_vae_mnist.yaml  llm_distill.yaml  llm_eval_custom.yaml  llm_finetune_lora.yaml  llm_inference.yaml  llm_inference_compare.yaml  llm_prompting_compare.yaml  llm_quantize_compare.yaml  ml_classification.yaml  ml_explain_shap.yaml  ml_regression.yaml  ml_tuning_optuna.yaml  nlp_classification.yaml  nlp_embeddings.yaml  rag_pipeline.yaml  rl_cartpole.yaml
notebooks/: 00_device_check.py
notebooks/llm/: 01_inference.py
notebooks/rag/: 01_pipeline.py
scripts/: download_models.py  setup_environment.sh
src/latent_lab/: __init__.py  cli.py  config.py
src/latent_lab/cv/: __init__.py  classification.py  detection.py  export.py
src/latent_lab/data/: loader.py
src/latent_lab/dl/: __init__.py  autoencoder.py  cnn.py  diffusion.py  gan.py  optimization.py
src/latent_lab/domains/: __init__.py  cv.py  dl.py  llm.py  ml.py  nlp.py  rl.py
src/latent_lab/experiments/: __init__.py  runner.py  tracker.py
src/latent_lab/llm/: __init__.py  distillation.py  evaluation.py  finetune.py  inference.py  prompting.py  quantize.py
src/latent_lab/ml/: __init__.py  classification.py  clustering.py  explainability.py  regression.py  tuning.py
src/latent_lab/models/: __init__.py  mlx_utils.py  torch_utils.py
src/latent_lab/nlp/: __init__.py  classification.py  embeddings.py  ner.py  tokenizer.py
src/latent_lab/rag/: __init__.py  chunking.py  evaluation.py  pipeline.py  retrieval.py
src/latent_lab/rl/: __init__.py  classic.py  custom.py
src/latent_lab/serving/: api.py
src/latent_lab/utils/: memory.py
tests/: test_config.py  test_memory_utils.py
